base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tess
spec:
  selector:
    app: tess
  ports:
    - name: http
      port: 80
      targetPort: 80
